examples/datalog/18_advanced_patterns/15_hierarchy.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_hierarchy
Knowledge graph 'test_hierarchy' created.
Switched to knowledge graph: test_hierarchy
> .kg use test_hierarchy
Switched to knowledge graph: test_hierarchy
> +employees[(1, "CEO", 0), (2, "VP Sales", 1), (3, "VP Eng", 1), (4, "Sales Rep", 2), (5, "Engineer", 3), (6, "Sr Engineer", 3)].
Inserted 6 fact(s) into 'employees'.
> direct_reports(Manager, Employee) :- employees(Employee, _, Manager), Manager != 0.
5 rows:
  (1, 2)
  (1, 3)
  (2, 4)
  (3, 5)
  (3, 6)
(session: 1 rule(s))
> ?- direct_reports(Manager, Employee).
5 rows:
  (1, 2)
  (1, 3)
  (2, 4)
  (3, 5)
  (3, 6)
> +subordinate(Manager, Employee) :- direct_reports(Manager, Employee).
Rule 'subordinate' registered.
> +subordinate(Manager, Employee) :- subordinate(Manager, Mid), direct_reports(Mid, Employee).
Rule 'subordinate' registered.
> ?- subordinate(Manager, Employee).
No results.
> report_count(Manager, <COUNT:Emp>) :- direct_reports(Manager, Emp).
Script error: Parse error: Unknown aggregate function: 
